--- a/app/src/main/res/layout/fragment_hike.xml
+++ b/app/src/main/res/layout/fragment_hike.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="80dp">
+        android:layout_marginBottom="100dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -246,14 +246,202 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
+                android:drawablePadding="2dp"
                 android:text="@string/required_equipments"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:drawableLeftCompat="@drawable/ic_baseline_equipments"
-                android:drawablePadding="2dp"
                 app:drawableTint="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout" />
+
+            <CheckBox
+                android:id="@+id/sateliteCB"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:hint="@string/remove"
+                android:text="@string/satellite_communicator"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/equipmentText" />
+
+            <CheckBox
+                android:id="@+id/polesCB"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:hint="@string/remove"
+                android:text="@string/trekking_poles"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sateliteCB" />
+
+            <CheckBox
+                android:id="@+id/headlampCB"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:hint="@string/remove"
+                android:text="@string/headlamp"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/polesCB" />
+
+            <CheckBox
+                android:id="@+id/waterCB"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:hint="@string/remove"
+                android:text="@string/water_filtration_system"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/headlampCB" />
+
+            <CheckBox
+                android:id="@+id/gpsCB"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:hint="@string/remove"
+                android:text="@string/gps_map"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/waterCB" />
+
+            <CheckBox
+                android:id="@+id/batteryCB"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:hint="@string/remove"
+                android:text="@string/battery_backup"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gpsCB" />
+
+            <CheckBox
+                android:id="@+id/otherCB"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:hint="@string/remove"
+                android:text="@string/other"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:buttonTint="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/batteryCB" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/otherEquipmentInputLayout"
+                style="@style/TextField"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="32dp"
+                android:hint="@string/other_equipments"
+                android:visibility="gone"
+                app:boxStrokeWidth="2dp"
+                app:counterEnabled="true"
+                app:counterTextColor="@color/white"
+                app:endIconDrawable="@drawable/ic_baseline_clear_text"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/white"
+                app:hintAnimationEnabled="true"
+                app:hintEnabled="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/otherCB"
+                app:startIconDrawable="@drawable/ic_baseline_equipments"
+                app:startIconTint="@color/white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/otherEquipmentInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text|textMultiLine"
+                    android:textColorHint="@color/white" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/participantsInputLayout"
+                style="@style/TextField"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="32dp"
+                android:hint="@string/number_of_participants"
+                android:visibility="visible"
+                app:boxStrokeWidth="2dp"
+                app:endIconDrawable="@drawable/ic_baseline_clear_text"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/white"
+                app:hintAnimationEnabled="true"
+                app:hintEnabled="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/otherEquipmentInputLayout"
+                app:startIconDrawable="@drawable/ic_baseline_participants"
+                app:startIconTint="@color/white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/participantsInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:textColorHint="@color/white" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/durationInputLayout"
+                style="@style/TextField"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="32dp"
+                android:hint="@string/hike_duration"
+                android:visibility="visible"
+                app:boxStrokeWidth="2dp"
+                app:endIconDrawable="@drawable/ic_baseline_clear_text"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/white"
+                app:hintAnimationEnabled="true"
+                app:hintEnabled="true"
+                app:suffixText="hours"
+                app:suffixTextColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/participantsInputLayout"
+                app:startIconDrawable="@drawable/ic_baseline_duration"
+                app:startIconTint="@color/white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/durationInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number|numberDecimal"
+                    android:textColorHint="@color/white" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
