--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,8 +15,8 @@
     </style>
     
     <style name="DialogAnimation">
-        <item name="android:windowEnterAnimation">@anim/slide_in</item>
-        <item name="android:windowExitAnimation">@anim/slide_out</item>
+        <item name="android:windowEnterAnimation">@anim/slide_in_vertical</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_vertical</item>
     </style>
 
     <style name="TextField" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
