--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,5 +30,9 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="DateTimePickerAppearance" parent="Theme.MaterialComponents.DayNight.Dialog">
+        <item name="colorAccent">@color/lavender</item>
+    </style>
     
 </resources>
